Clean up two scraped posts that couldn't render; fix embedded YouTube style
Also, let there be 10 items per page, not 20 -- 20 seemed too much

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -119,4 +119,9 @@ iframe {
   margin-bottom: 2em;
   margin-left: 50%;
   transform: translateX(-50%);
+
+  &[src*="www.youtube.com"] {
+    width: 560px;
+    height: 315px;
+  }
 }
